# dbweave

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  PORT_PLAN.md  README.txt  about.dfm  about.h  bereiche.cpp  blockmuster.cpp  blockmuster.h  blockmuster_form.dfm  blockmuster_muster.cpp  clear.cpp  commandline.cpp  comutil.cpp  cursor.h  cursordir_form.cpp  cursordir_form.h  cursordirection_form.cpp  cursordirection_form.dfm  cursorgoto_form.cpp  cursorgoto_form.h  cursorimpl.h  datamodule.dti  dbw.bpr  dbw.res  dbw3_base.h  dbw3_form.cpp  dbw3_strings.h  delete.cpp  draw.cpp  einstellverh_form.h  einzugassistent_form.cpp  einzugassistent_form.h  einzugimpl.h  entervv_form.h  entwurfsinfo_form.cpp  entwurfsinfo_form.h  (+91 more)
legacy/: about.cpp  assert.cpp  assert.h  aufknuepfung.cpp  blockmuster_form.cpp  blockmuster_form.h  colors.cpp  colors.h  combase.h  comutil.h  cursor.cpp  cursordir_form.dfm  cursordirection_form.h  cursorgoto_form.dfm  datamodule.cpp  datamodule.dfm  datamodule.h  dbw.cpp  dbw.dsk  dbw.nsi  dbw3_form.dfm  dbw3_form.h  debugchecks.cpp  deltmp.bat  dialogs.cpp  einstellverh_form.cpp  einstellverh_form.dfm  einzug.cpp  einzug.h  einzugassistent_form.dfm  einzugtrittfolge.cpp  entervv_form.cpp  entervv_form.dfm  entwurfsinfo_form.dfm  enums.h  envoptions_form.dfm  export.cpp  farbauswahl1_form.dfm  farbauswahl_form.cpp  farbauswahl_form.h  (+80 more)
packaging/: README.md
packaging/linux/: build_appimage.sh
packaging/macos/: build_dmg.sh
packaging/windows/: build_installer.ps1  dbweave.nsi
resources/linux/: dbweave.desktop
resources/macos/: Info.plist.in  build_icns.sh  dbweave.icns
resources/windows/: dbweave.rc
samples/: Pepita.dbw  Schiffli.dbw  double face.dbw  double weave.dbw  kautschuk.dbw  lancee.dbw  lanciertest.dbw  metamorphosis.dbw  satin.dbw  siropa.dbw  stripes.dbw  tabby twill colour variation.dbw  textile-export.dbw  tromp as writ.dbw  twill variation.dbw
src/: CMakeLists.txt  main.cpp  version.h.in
src/compat/: CMakeLists.txt  assert_compat.h  colors_compat.h  registry_compat.h  shift_compat.h  tbitmap_compat.h  tstringlist_compat.h  vcl_compat.h
src/domain/: CMakeLists.txt  colors.cpp  colors.h  enums.h  felddef.cpp  felddef.h  palette.cpp  palette.h  rangecolors.cpp  rangecolors.h  regbase.h  settings.cpp  settings.h  zentralsymm.cpp  zentralsymm.h
src/io/: CMakeLists.txt  fileformat.cpp  fileformat.h  loadmap.h
src/loom/: CMakeLists.txt  loomsettings.h  serialcontrollers.cpp  serialcontrollers.h  serialport.cpp  serialport.h
src/ui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aufknuepfung.cpp  bereiche.cpp  blockmuster.cpp  blockmuster.h  blockmusterdialog.cpp  blockmusterdialog.h  choosecolordialog.cpp  choosecolordialog.h  clear.cpp  cursor.cpp  cursor.h  cursordirdialog.cpp  cursordirdialog.h  cursorgotodialog.cpp  cursorgotodialog.h  cursorimpl.h  datamodule.cpp  datamodule.h  dbw3_base.h  dbw3_strings.h  delete.cpp  draw.cpp  draw_cell.cpp  draw_cell.h  edit.cpp  einzug.cpp  einzug.h  einzugassistentdialog.cpp  einzugassistentdialog.h  einzugimpl.h  entervvdialog.cpp  entervvdialog.h  entwurfsinfodialog.cpp  entwurfsinfodialog.h  envoptionsdialog.cpp  envoptionsdialog.h  exportbitmap.cpp  (+110 more)
tests/: CMakeLists.txt  test_colors.cpp  test_compat.cpp  test_cursor.cpp  test_draw_cell.cpp  test_einzug.cpp  test_felddef.cpp  test_fileformat.cpp  test_fileload.cpp  test_input.cpp  test_language.cpp  test_mainwindow_skeleton.cpp  test_palette.cpp  test_rapport.cpp  test_rendering.cpp  test_setops.cpp  test_settings.cpp  test_smoke.cpp  test_trittfolge_ops.cpp  test_undoredo.cpp  test_wif_roundtrip.cpp  test_zentralsymm.cpp
